force-app/main/default/objects/Tarif_Member__c/Tarif_Member__c.object-meta.xml
<CustomObject>
    <description>this shows the services and products that belong to a specific tarif</description>
    <label>Tarif Member</label>
    <nameField>
        <displayFormat>TAI-{000000}</displayFormat>
        <label>Tarif Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tarif Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>