force-app/main/default/objects/Tarif_Member__c/fields/Id_Tarif_Item__c.field-meta.xml
<CustomField>
    <fullName>Id_Tarif_Item__c</fullName>
    <description>this holds the id of tarif member</description>
    <label>Id Tarif Item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>