force-app/main/default/objects/Tarif_Member__c/fields/Tarif_Name__c.field-meta.xml
<CustomField>
    <fullName>Tarif_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this holds the tarif name</description>
    <label>Tarif Name</label>
    <referenceTo>Tarif__c</referenceTo>
    <relationshipLabel>Tarif Members</relationshipLabel>
    <relationshipName>Tarif_Members</relationshipName>
    <type>Lookup</type>
</CustomField>