force-app/main/default/objects/Tarif_Member__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>this helps in identifying product or service record id.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>AddOn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>