force-app/main/default/objects/Tarif_Member__c/recordTypes/AT_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>AT_Tarif_Member</fullName>
    <active>true</active>
    <label>AT Tarif Member</label>
</RecordType>