force-app/main/default/objects/Tarif_Member__c/recordTypes/CD_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>CD_Tarif_Member</fullName>
    <active>true</active>
    <label>CD Tarif Member</label>
</RecordType>