force-app/main/default/objects/Tarif_Member__c/recordTypes/CZ_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>CZ_Tarif_Member</fullName>
    <active>true</active>
    <description>Czech Republic Tarif Member</description>
    <label>CZ Tarif Member</label>
</RecordType>