force-app/main/default/objects/Tarif_Member__c/recordTypes/DE_Tariff_Member.recordType-meta.xml
<RecordType>
    <fullName>DE_Tariff_Member</fullName>
    <active>true</active>
    <label>DE Tariff Member</label>
</RecordType>