force-app/main/default/objects/Tarif_Member__c/recordTypes/DH_AU_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Tarif_Member</fullName>
    <active>true</active>
    <label>DH AU Tarif Member</label>
</RecordType>