force-app/main/default/objects/Tarif_Member__c/recordTypes/FI_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>FI_Tarif_Member</fullName>
    <active>true</active>
    <label>FI Tarif Member</label>
</RecordType>