force-app/main/default/objects/Tarif_Member__c/recordTypes/FP_Tariff_Member.recordType-meta.xml
<RecordType>
    <fullName>FP_Tariff_Member</fullName>
    <active>true</active>
    <label>FP Tariff Member</label>
</RecordType>