force-app/main/default/objects/Tarif_Member__c/recordTypes/HU_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>HU_Tarif_Member</fullName>
    <active>true</active>
    <description>Hungary Tarif Member</description>
    <label>HU Tarif Member</label>
</RecordType>