force-app/main/default/objects/Tarif_Member__c/recordTypes/PY_Tariff_Member.recordType-meta.xml
<RecordType>
    <fullName>PY_Tariff_Member</fullName>
    <active>true</active>
    <description>Record type for Pedidos Ya and in future to be global for all countries</description>
    <label>PY Tariff Member</label>
</RecordType>