force-app/main/default/objects/Tarif_Member__c/recordTypes/SE_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>SE_Tarif_Member</fullName>
    <active>true</active>
    <label>SE Tarif Member</label>
</RecordType>