force-app/main/default/objects/Tarif_Member__c/recordTypes/Talabat_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Tarif_Member</fullName>
    <active>true</active>
    <label>Talabat Tarif Member</label>
</RecordType>