force-app/main/default/objects/Tarif_Member__c/recordTypes/UK_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>UK_Tarif_Member</fullName>
    <active>true</active>
    <label>UK Tarif Member</label>
</RecordType>