force-app/main/default/objects/Tarif_Member__c/recordTypes/Yogiyo_Tarif_Member.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Tarif_Member</fullName>
    <active>true</active>
    <label>Yogiyo Tarif Member</label>
</RecordType>