force-app/main/default/objects/Tarif_Member__c/validationRules/MandatoryValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryValidation</fullName>
    <active>true</active>
    <description>field must be entered</description>
    <errorConditionFormula>ISPICKVAL(Type__c,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Enter value for Type</errorMessage>
</ValidationRule>