force-app/main/default/objects/Tarif_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Id_Tarif_Item__c</columns>
    <columns>Tarif_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>